{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 122,
  "lineage": "ae3e9505-c9b9-9084-580e-4ba9a7f0ba2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:internet-gateway/igw-0a74c1fef454437c8",
            "id": "igw-0a74c1fef454437c8",
            "owner_id": "177559564758",
            "region": "us-east-2",
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:route-table/rtb-0f24beedbed7e02a3",
            "id": "rtb-0f24beedbed7e02a3",
            "owner_id": "177559564758",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a74c1fef454437c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "rtb-0f24beedbed7e02a3",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:security-group/sg-0c03eb59bd6270fcf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c03eb59bd6270fcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker webhook",
                "from_port": 4444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "finus-default",
            "name_prefix": "",
            "owner_id": "177559564758",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "sg-0c03eb59bd6270fcf",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:security-group/sg-0e428a46b850e036a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e428a46b850e036a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP 3000 from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "finus-services",
            "name_prefix": "",
            "owner_id": "177559564758",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "sg-0e428a46b850e036a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:security-group/sg-0973f01390a9d839a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0973f01390a9d839a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "finus-webserver",
            "name_prefix": "",
            "owner_id": "177559564758",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "sg-0973f01390a9d839a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:subnet/subnet-09d5718b3434ec2be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d5718b3434ec2be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177559564758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "subnet-09d5718b3434ec2be",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:subnet/subnet-05e5676ab26e11acc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e5676ab26e11acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177559564758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "vpc_id": "vpc-0e13d5c774ed2b3c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "subnet-05e5676ab26e11acc",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "finus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:177559564758:vpc/vpc-0e13d5c774ed2b3c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7a72d6813ae088c",
            "default_route_table_id": "rtb-09da1959a912933f3",
            "default_security_group_id": "sg-06987cbe4f87d0594",
            "dhcp_options_id": "dopt-01d5dfa449859477f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e13d5c774ed2b3c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09da1959a912933f3",
            "owner_id": "177559564758",
            "region": "us-east-2",
            "tags": {
              "Name": "Finus"
            },
            "tags_all": {
              "Name": "Finus"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "vpc-0e13d5c774ed2b3c8",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f46a5b83e1a6af0",
            "arn": "arn:aws:ec2:us-east-2:177559564758:elastic-ip/eipalloc-04f46a5b83e1a6af0",
            "association_id": "eipassoc-0818aa83d85c2f91b",
            "domain": "vpc",
            "id": "eipalloc-04f46a5b83e1a6af0",
            "instance": "i-008147727278f7080",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f364cdcae030e0e6",
            "private_dns": "ip-10-0-221-90.us-east-2.compute.internal",
            "private_ip": "10.0.221.90",
            "public_dns": "ec2-16-58-118-74.us-east-2.compute.amazonaws.com",
            "public_ip": "16.58.118.74",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "finus-dev-backend"
            },
            "tags_all": {
              "Name": "finus-dev-backend"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.services",
            "aws_subnet.dev",
            "aws_vpc.finus",
            "module.dev.aws_instance.backend",
            "module.dev.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0857b784b20a92dad",
            "arn": "arn:aws:ec2:us-east-2:177559564758:elastic-ip/eipalloc-0857b784b20a92dad",
            "association_id": "eipassoc-06e143e0fc9004868",
            "domain": "vpc",
            "id": "eipalloc-0857b784b20a92dad",
            "instance": "i-020ba441d6c3c0258",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03283cda15cf431d3",
            "private_dns": "ip-10-0-140-152.us-east-2.compute.internal",
            "private_ip": "10.0.140.152",
            "public_dns": "ec2-3-142-125-202.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.125.202",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "finus-dev-webserver"
            },
            "tags_all": {
              "Name": "finus-dev-webserver"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.webserver",
            "aws_subnet.dev",
            "aws_vpc.finus",
            "module.dev.aws_instance.webserver",
            "module.dev.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0b78dcacbab728f",
            "arn": "arn:aws:ec2:us-east-2:177559564758:instance/i-008147727278f7080",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008147727278f7080",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "finus-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f364cdcae030e0e6"
              }
            ],
            "primary_network_interface_id": "eni-0f364cdcae030e0e6",
            "private_dns": "ip-10-0-221-90.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.221.90",
            "public_ip": "16.58.118.74",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c0b46050d4eb986e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d5718b3434ec2be",
            "tags": {
              "Name": "finus-dev-backend"
            },
            "tags_all": {
              "Name": "finus-dev-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c03eb59bd6270fcf",
              "sg-0e428a46b850e036a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "i-008147727278f7080",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.services",
            "aws_subnet.dev",
            "aws_vpc.finus",
            "module.dev.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0b78dcacbab728f",
            "arn": "arn:aws:ec2:us-east-2:177559564758:instance/i-020ba441d6c3c0258",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020ba441d6c3c0258",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "finus-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03283cda15cf431d3"
              }
            ],
            "primary_network_interface_id": "eni-03283cda15cf431d3",
            "private_dns": "ip-10-0-140-152.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.140.152",
            "public_ip": "3.142.125.202",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e9f25279b1c2ac1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d5718b3434ec2be",
            "tags": {
              "Name": "finus-dev-webserver"
            },
            "tags_all": {
              "Name": "finus-dev-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0973f01390a9d839a",
              "sg-0c03eb59bd6270fcf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "i-020ba441d6c3c0258",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.webserver",
            "aws_subnet.dev",
            "aws_vpc.finus",
            "module.dev.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04712335fcc923e95",
            "region": "us-east-2",
            "route_table_id": "rtb-0f24beedbed7e02a3",
            "subnet_id": "subnet-09d5718b3434ec2be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.route_table",
            "aws_subnet.dev",
            "aws_vpc.finus"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0262f07d6e23594c4",
            "arn": "arn:aws:ec2:us-east-2:177559564758:elastic-ip/eipalloc-0262f07d6e23594c4",
            "association_id": "eipassoc-0202a50414bdbee94",
            "domain": "vpc",
            "id": "eipalloc-0262f07d6e23594c4",
            "instance": "i-0dd805bcaa0a0ade3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d9461ec08710f2d7",
            "private_dns": "ip-10-0-50-231.us-east-2.compute.internal",
            "private_ip": "10.0.50.231",
            "public_dns": "ec2-3-150-23-72.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.23.72",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "finus-prod-backend"
            },
            "tags_all": {
              "Name": "finus-prod-backend"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.services",
            "aws_subnet.prod",
            "aws_vpc.finus",
            "module.prod.aws_instance.backend",
            "module.prod.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fe359af4fbd5f9b",
            "arn": "arn:aws:ec2:us-east-2:177559564758:elastic-ip/eipalloc-06fe359af4fbd5f9b",
            "association_id": "eipassoc-0ce3ab9543feb5d7f",
            "domain": "vpc",
            "id": "eipalloc-06fe359af4fbd5f9b",
            "instance": "i-0f897d2768cad0033",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e2de615da26dd0d9",
            "private_dns": "ip-10-0-57-91.us-east-2.compute.internal",
            "private_ip": "10.0.57.91",
            "public_dns": "ec2-18-190-215-135.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.215.135",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "finus-prod-webserver"
            },
            "tags_all": {
              "Name": "finus-prod-webserver"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.webserver",
            "aws_subnet.prod",
            "aws_vpc.finus",
            "module.prod.aws_instance.webserver",
            "module.prod.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0b78dcacbab728f",
            "arn": "arn:aws:ec2:us-east-2:177559564758:instance/i-0dd805bcaa0a0ade3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd805bcaa0a0ade3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "finus-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d9461ec08710f2d7"
              }
            ],
            "primary_network_interface_id": "eni-0d9461ec08710f2d7",
            "private_dns": "ip-10-0-50-231.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.50.231",
            "public_ip": "3.150.23.72",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0115ad31723e63439",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e5676ab26e11acc",
            "tags": {
              "Name": "finus-prod-backend"
            },
            "tags_all": {
              "Name": "finus-prod-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c03eb59bd6270fcf",
              "sg-0e428a46b850e036a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "i-0dd805bcaa0a0ade3",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.services",
            "aws_subnet.prod",
            "aws_vpc.finus",
            "module.prod.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0b78dcacbab728f",
            "arn": "arn:aws:ec2:us-east-2:177559564758:instance/i-0f897d2768cad0033",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f897d2768cad0033",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "finus-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e2de615da26dd0d9"
              }
            ],
            "primary_network_interface_id": "eni-0e2de615da26dd0d9",
            "private_dns": "ip-10-0-57-91.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.57.91",
            "public_ip": "18.190.215.135",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d61c7cb18058c36",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e5676ab26e11acc",
            "tags": {
              "Name": "finus-prod-webserver"
            },
            "tags_all": {
              "Name": "finus-prod-webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0973f01390a9d839a",
              "sg-0c03eb59bd6270fcf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "177559564758",
            "id": "i-0f897d2768cad0033",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_security_group.webserver",
            "aws_subnet.prod",
            "aws_vpc.finus",
            "module.prod.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1e2801d2830d94c",
            "region": "us-east-2",
            "route_table_id": "rtb-0f24beedbed7e02a3",
            "subnet_id": "subnet-05e5676ab26e11acc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.route_table",
            "aws_subnet.prod",
            "aws_vpc.finus"
          ]
        }
      ]
    }
  ]
}